moving to laptop

--- a/continuum_mechanics_and_finite_element_method.tex
+++ b/continuum_mechanics_and_finite_element_method.tex
@@ -420,7 +420,7 @@ Accordingly, the specific Helmholtz free energy is postulated to follow
 \end{highlight}
 To find the constitutive equations for the stress tensor and the entropy, one can substitute
 \begin{equation}
-    \dot \psi = \frac{\partial \psi}{\partial \mat F}:\dot{\mat F} + \frac{\partial \psi}{\partial \dot \theta}\dot \theta + \frac{\partial \psi}{\partial \alpha_k}\dot \alpha_k,
+    \dot \psi = \frac{\partial \psi}{\partial \mat F}:\dot{\mat F} + \frac{\partial \psi}{\partial \theta}\dot \theta + \frac{\partial \psi}{\partial \alpha_k}\dot \alpha_k,
 \end{equation}
 found from the chain rule, on the Clausius-Duhem equation, Equation \eqref{eq:clasius_duhem_eq}, obtaining
 \begin{equation}
@@ -451,7 +451,7 @@ multiplying Equation \eqref{eq:clausius_duhem_energy} also by $J$.
 
 For each internal variable $\alpha_k$ of the set $\alpha$ of internal variables, the conjugate thermodynamical forces are defined to be
 \begin{equation}
-    A_k\equiv \bar\rho \frac{\partial \psi}{\partial \alpha_k},
+    A_k\equiv \rho_0 \frac{\partial \psi}{\partial \alpha_k},
 \end{equation}
 so that the Clausius-Duhem equation can be written in a reduced form as
 \begin{highlight}
