--- a/main.tex
+++ b/main.tex
@@ -363,6 +363,7 @@
 \include{continuum_mechanics_and_finite_element_method}
 \include{mechanical_problem}
 \include{thermo_problem}
+\include{thermo_mechanical_problem}
 \include{solvers_for_coupled_fields}
 % \include{conclusions}
 \appendix
