moving to desktop

--- a/Thermomechanics.bib
+++ b/Thermomechanics.bib
@@ -1419,7 +1419,7 @@
 	language = {en},
 	urldate = {2021-01-13},
 	journal = {Computer Methods in Applied Mechanics and Engineering},
-	author = {Dittmann, M. and Franke, M. and Temizer, İ. and Hesch, C.},
+	author = {Dittmann, M. and Franke, M. and Temizer, I. and Hesch, C.},
 	month = jun,
 	year = {2014},
 	keywords = {Mortar method, Frictional contact, Isogeometric Analysis, Thermomechanics},
@@ -1429,7 +1429,7 @@
 
 @phdthesis{gitterle_dual_2012,
 	type = {Ph.{D}.},
-	title = {A dual mortar formulation for ﬁnite deformation frictional contact problems including wear and thermal coupling},
+	title = {A dual mortar formulation for finite deformation frictional contact problems including wear and thermal coupling},
 	abstract = {Contact mechanics and friction are fundamental disciplines in engineering and applied science. They describe the potential surface interactions of solids. Closely related to especially frictional contact are effects from wear and thermomechanics. Alone and in combination, they are causal for different kinds of phenomena. Fretting fatigue, a possible damage mechanism in turbine or fan disc to blade joints in aircraft engines, is one of many relevant examples.},
 	language = {de},
 	school = {Technische Universität München},
